[package]
name = "sfs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1", features = [ "derive" ] }
fuser = "0.11"
bincode = "1.3.3"
bitintr = "0.3.0"
lru = "0.7.5"
log = "0.4.17"
simple_logger = "2.1.0"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
cannyls = "0.10.0"
