[package]
name = "cyanfs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1", features = [ "derive" ] }
fuser = "0.11"
bincode = "1.3.3"
lru = "0.7.5"
log = "0.4.17"
simple_logger = "2.1.0"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
argh = "0.1.7"
autocxx = "0.22.0"
cxx = "1.0"

[build-dependencies]
cmake = "0.1"
autocxx-build = "0.22.0"
miette = { version="4.3", features = [ "fancy" ] }
